[package]
name = "image-cache-cli"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
cli-helpers = { workspace = true }
csv = { workspace = true }
image-cache = { path = "../core/" }
image-cache-index = { path = "../index/" }
md5 = { workspace = true }
prefix-file-tree = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-hex = "0.1"
thiserror = { workspace = true }
tokio = { workspace = true }
