[package]
name = "image-cache"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
imghdr = { workspace = true }
md5 = { workspace = true }
mime = { workspace = true }
prefix-file-tree = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
